# music-library-manager

./: .gitignore  CLAUDE.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: index.md  mood-analysis-models-research.md
docs/api/: analysis.md  core.md  export.md  files.md  normalize.md  player.md
docs/cli/: commands.md
docs/development/: contributing.md  history.md  testing.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/user-guide/: analysis.md  database.md  desktop-app.md  files.md  normalization.md  player.md  serato-export.md
scripts/: push-wiki.sh
src/vdj_manager/: __init__.py  cli.py  config.py
src/vdj_manager/analysis/: __init__.py  analysis_cache.py  audio_features.py  energy.py  model_downloader.py  mood.py  mood_backend.py  mood_mtg_jamendo.py  online_genre.py  online_mood.py
src/vdj_manager/core/: __init__.py  backup.py  database.py  models.py
src/vdj_manager/export/: __init__.py  mapper.py  serato.py
src/vdj_manager/files/: duplicates.py  id3_editor.py  path_remapper.py  scanner.py  validator.py
src/vdj_manager/normalize/: __init__.py  loudness.py  measurement_cache.py  processor.py
src/vdj_manager/player/: __init__.py  album_art.py  bridge.py  color_extract.py  engine.py  waveform.py
src/vdj_manager/ui/: __init__.py  app.py  constants.py  main_window.py  navigation.py  theme.py
src/vdj_manager/ui/delegates/: album_art_delegate.py  tag_edit_delegates.py
src/vdj_manager/ui/models/: __init__.py  multi_column_filter.py  task_state.py  track_model.py
src/vdj_manager/ui/state/: __init__.py  checkpoint_manager.py
src/vdj_manager/ui/widgets/: __init__.py  analysis_panel.py  column_browser.py  column_filter_row.py  command_palette.py  cue_table_widget.py  database_panel.py  empty_state.py  export_panel.py  files_panel.py  mini_player.py  normalization_panel.py  operation_panel.py  player_panel.py  progress_widget.py  results_table.py  resume_dialog.py  shortcuts_dialog.py  star_rating_widget.py  waveform_widget.py  workflow_panel.py
src/vdj_manager/ui/workers/: __init__.py  analysis_workers.py  base_worker.py  database_worker.py  export_workers.py  file_workers.py  normalization_worker.py  player_workers.py
tests/: __init__.py  conftest.py  test_album_art.py  test_album_art_delegate.py  test_analysis_cache.py  test_analysis_panel.py  test_backup.py  test_checkpoint_manager.py  test_color_extract.py  test_column_browser.py  test_column_filter_row.py  test_command_palette.py  test_context_menu.py  test_cue_table_widget.py  test_database.py  test_database_atomic_save.py  test_database_panel_operations.py  test_database_update_infos.py  test_empty_state.py  test_energy.py  test_export_panel.py  test_files_panel.py  test_genre_worker.py  test_gui_integration.py  test_id3_editor.py  test_logging.py  test_mapper.py  test_measurement_cache.py  test_mini_player.py  test_model_downloader.py  test_models.py  test_mood_analysis.py  test_mood_backend.py  test_mood_mtg_jamendo.py  test_multi_column_filter.py  test_navigation.py  test_normalization.py  test_normalization_panel.py  test_normalization_panel_enhanced.py  test_normalization_worker.py  (+26 more)
wiki/: Audio-Analysis.md  CLI-Commands.md  Configuration.md  Contributing.md  Database-Operations.md  Desktop-Application.md  Development-History.md  File-Management.md  Home.md  Installation.md  Loudness-Normalization.md  Mood-Analysis-Research.md  Player.md  Quick-Start.md  Serato-Export.md  Testing.md  _Sidebar.md
