[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vdj-manager"
version = "0.1.0"
description = "VirtualDJ Library Manager - organize, analyze, and normalize your DJ music library"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Akhil Guliani" }
]
keywords = ["virtualdj", "dj", "music", "library", "management", "audio", "serato"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "lxml>=5.0.0",
    "pydantic>=2.0.0",
    "librosa>=0.10.0",
    "mutagen>=1.47.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "PySide6>=6.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
mood = [
    "essentia-tensorflow>=2.1b6.dev1110",
]
serato = [
    "construct>=2.10.0",
]

[project.scripts]
vdj-manager = "vdj_manager.cli:cli"
vdj-manager-gui = "vdj_manager.ui.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/vdj_manager"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
