[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vdj-manager"
version = "0.1.0"
description = "VirtualDJ Library Manager - organize, analyze, and normalize your DJ music library"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Akhil Guliani" }
]
keywords = ["virtualdj", "dj", "music", "library", "management", "audio", "serato"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "lxml>=5.0.0",
    "pydantic>=2.0.0",
    "librosa>=0.10.0",
    "mutagen>=1.47.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "PySide6>=6.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "lxml-stubs>=0.5.0",
]
mood = [
    "essentia-tensorflow>=2.1b6.dev1110",
]
serato = [
    "construct>=2.10.0",
]
online = [
    "pylast>=5.0.0",
    "musicbrainzngs>=0.7.1",
]
player = [
    "python-vlc>=3.0.0",
]

[project.scripts]
vdj-manager = "vdj_manager.cli:cli"
vdj-manager-gui = "vdj_manager.ui.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/vdj_manager"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = [
    "E402",   # module-import-not-at-top (lazy imports for optional deps)
    "E501",   # line-too-long (black handles formatting)
    "N802",   # invalid-function-name (Qt camelCase overrides)
    "N803",   # invalid-argument-name (Mock* params in tests)
    "N806",   # non-lowercase-variable-in-function (Mock* vars in tests)
]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_ignores = true
disallow_untyped_defs = false
check_untyped_defs = true
disallow_incomplete_defs = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unreachable = false

[[tool.mypy.overrides]]
module = [
    "essentia.*",
    "librosa.*",
    "soundfile.*",
    "construct.*",
    "pylast.*",
    "musicbrainzngs.*",
    "vlc.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
